se agrega section con imagen

--- a/index.html
+++ b/index.html
@@ -15,7 +15,13 @@
 
         <h4>El subtitulo de mi poreycto</h4>
 
-    </div>
+
+
+
+    <section class="section-01">
+
+
+    </section>
 </main>
 
     
