se agregaga parrafo

--- a/index.html
+++ b/index.html
@@ -22,6 +22,17 @@
 
 
     </section>
+
+
+
+
+    <section class="section-02">
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi qui ex, dolore amet ea corrupti? Obcaecati in consequatur dolorem, dolores doloribus laborum. Ipsam ipsa assumenda autem vel similique sunt sed!</p>
+
+    </section>
+
+
+
 </main>
 
     
