--- a/index.html
+++ b/index.html
@@ -5,7 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<body>
+
+
+<body style=" color: white; background: background: rgb(196,219,219);
+background: linear-gradient(180deg, rgba(196,219,219,1) 0%, rgba(40,25,48,1) 71%, rgba(3,4,18,1) 100%); ">
 
 <main>
 
