agrego otro parrafo y una nueva seccion

--- a/index.html
+++ b/index.html
@@ -36,6 +36,14 @@ background: linear-gradient(180deg, rgba(196,219,219,1) 0%, rgba(40,25,48,1) 71%
 
 
 
+
+    <section class="section-02">
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi qui ex, dolore amet ea corrupti? Obcaecati in consequatur dolorem, dolores doloribus laborum. Ipsam ipsa assumenda autem vel similique sunt sed!</p>
+
+    </section>
+
+
+
 </main>
 
     
